--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
                     <h1 class="about_name">Maryna Nazina</h1>
                     <p class="about_discribtion">
                         <span class="pa">
-                            I already have some experience of the public catering service. I worked as a waitress in a restaurant in Ukraine and for
-                    a period in China as well. I am a diligent and friendly person with excellent customer service skills. 
+                            I already have some experience of the catering service. I worked as a waitress in a restaurant in Ukraine and China as
+                            well. I am a diligent and friendly person with excellent customer service skills.
                         </span>
                     <br /><span class="pa"> 
                         Before coming to Ireland, I was a teacher of English in the kindergarten. I also hold a certificate in teaching English.
-                        My hobbies are photography, doing sports and web development. I enjoy working as a part of a team and also enjoy using 
-                        my own initiative. I get on well with the public and colleagues.
+                        My hobbies are photography and sports. I am studying web development for front end specialists too. I enjoy working as a
+                        part of a team as well as using my own initiative.
                         </span>
                 </div>
                 <!--Projects-->
@@ -111,7 +111,7 @@
                         <div class="wrapper-skills">
                             <li class="tech_skills_icon"><span class="tech_skills_text skills">Excellent Work Ethic</span></li>
                             <li class="tech_skills_icon"><span class="tech_skills_text skills">Ability to manage time properly</span></li>
-                            <li class="soft_skills_icon"><span class="soft_skills_text skills">Good communicational skill</span></li>
+                            <li class="soft_skills_icon"><span class="soft_skills_text skills">Good communicational skills</span></li>
                         </div>
                         <div class="wrapper-skills">
                             <li class="soft_skills_icon"><span class="soft_skills_text skills">High level of energy</span></li>
