--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
             <div class="main_content">
                 <!--about user-->
                 <div class="about">
-                    <!-- <h2 class="about_position">Waitress</h2> -->
+                    <!-- <h2 class="about_position">Jobseeker</h2> -->
                     <h1 class="about_name">Maryna Nazina</h1>
                     <p class="about_discribtion">
                         <span class="pa">
-                            I already have some experience of the catering service. I worked as a waitress in a restaurant in Ukraine and China as
+                            I have some experience of the catering service. I worked as a waitress in a restaurant in Ukraine and China as
                             well. I am a diligent and friendly person with excellent customer service skills.
                         </span>
                     <br /><span class="pa"> 
                         Before coming to Ireland, I was a teacher of English in the kindergarten. I also hold a certificate in teaching English.
-                        My hobbies are photography and sports. I am studying web development for front end specialists too. I enjoy working as a
-                        part of a team as well as using my own initiative.
+                        My hobbies are photography and sports. I am studying web development for front end specialists too. I was a Scrum Master and led a 9-person front-end developer team through creation of 2 projects. I enjoy working as a
+                        part of a group as well as using my own initiative.
                         </span>
                 </div>
                 <!--Projects-->
@@ -63,16 +63,6 @@
                 <div class="work">
                 <h3 class="title">Work Experience</h3>
                     <div>
-                        <h4 class="work_position">Waitress in restaurant <span class="organization"> Taksim</span></h4>
-                        <p class="period">2016-2017 <span class="line">|</span> Guangzhou, China</p>
-                    </div>
-                    <div>
-                        <h4 class="work_position">Waitress in Dolphinarium restaurant <span class="organization">Nemo</span></h4>
-                        <p class="period">2011-2012 <span class="line">|</span> Ukraine, Kharkiv</p>
-                        <ul class="work_list">
-                        </ul>
-                    </div>
-                    <div>
                         <h4 class="work_position">English Teacher <span class="organization">Shkola Radosti Oleni Chernyavskoy</span></h4>
                         <p class="period">2021-2022 <span class="line">|</span> Kharkiv </p>
                         <ul class="work_list">
@@ -100,6 +90,16 @@
                         </ul>
                     </div>
                     <div>
+                        <h4 class="work_position">Waitress in restaurant <span class="organization"> Taksim</span></h4>
+                        <p class="period">2016-2017 <span class="line">|</span> Guangzhou, China</p>
+                    </div>
+                    <div>
+                        <h4 class="work_position">Waitress in Dolphinarium restaurant <span class="organization">Nemo</span></h4>
+                        <p class="period">2011-2012 <span class="line">|</span> Ukraine, Kharkiv</p>
+                        <ul class="work_list">
+                        </ul>
+                    </div>
+                    <div>
                         <h4 class="work_position">Freelance photographer<span class="organization"> Freelance</span></h4>
                         <p class="period">2009 and currently <span class="line">|</span> Kharkiv </p>
                     </div>
@@ -112,11 +112,13 @@
                             <li class="tech_skills_icon"><span class="tech_skills_text skills">Excellent Work Ethic</span></li>
                             <li class="tech_skills_icon"><span class="tech_skills_text skills">Ability to manage time properly</span></li>
                             <li class="soft_skills_icon"><span class="soft_skills_text skills">Good communicational skills</span></li>
+                            <li class="soft_skills_icon"><span class="soft_skills_text skills">Agile</span></li>
                         </div>
                         <div class="wrapper-skills">
                             <li class="soft_skills_icon"><span class="soft_skills_text skills">High level of energy</span></li>
                             <li class="soft_skills_icon"><span class="soft_skills_text skills">Active and Creative</span></li>
                             <li class="soft_skills_icon"><span class="soft_skills_text skills">Friendly and Outgoing Attitude</span></li>
+                            <li class="soft_skills_icon"><span class="soft_skills_text skills">Attention to Detail</span></li>
                         </div>
                     </ul>
                 </div>
@@ -150,61 +152,66 @@
             <!--Slidebar-->
             <aslide class="slidebar">
                 <img src="ED7A9005-sm.jpg" alt="user photo" class="photo">
-            <!--Contacts-->
-            <div class="contacts">
-                <h3 class="sidebar_title contacts-contact">Contacts</h3>
-                <div>
-                <p>
-                    <span class="contact_type">C:</span>
-                    <a href="tel:+353851555005" class="contact_link">0851555005</a></p>
-                <p> 
-                    <span class="contact_type">E:</span>
-                    <a href="mailto:nzyame@gmail.com" class="contact_link">nzyame@gmail.com</a></p>
-                <!-- <p>
-                    <span class="contact_type">Gh:</span>
-                    <a href="https://github.com/nazinamari" class="contact_link">GitHub</a>
-                </p> -->
-                <p>
-                    <span class="contact_type">In:</span>
-                    <a href="https://www.linkedin.com/in/nazinamari/" class="contact_link">linkedin</a>
-                    <!-- <p class="lin">www.linkedin.com/in/nazinamari</p> -->
-                </p>
+                <div class="sliderbar-wrapper">
+                    <!--Contacts-->
+                    <div class="contacts">
+                        <h3 class="sidebar_title contacts-contact">Contacts</h3>
+                        <div>
+                            <p>
+                                <span class="contact_type">C:</span>
+                                <a href="tel:+353851555005" class="contact_link">0851555005</a>
+                            </p>
+                            <p>
+                                <span class="contact_type">E:</span>
+                                <a href="mailto:nzyame@gmail.com" class="contact_link">nzyame@gmail.com</a>
+                            </p>
+                            <p>
+                                <span class="contact_type">In:</span>
+                                <a href="https://www.linkedin.com/in/nazinamari/" class="contact_link">linkedin</a>
+                                <!-- <p class="lin">www.linkedin.com/in/nazinamari</p> -->
+                            </p>
+                            <p>
+                                <span class="contact_type">Gh:</span>
+                                <a href="https://github.com/nazinamari" class="contact_link">GitHub</a>
+                            </p>
+                        </div>
+                    </div>
+                    <!--Interests-->
+                    <div class="soft_skills">
+                        <h3 class="sidebar_title">Interests</h3>
+                        <ul class="soft_skills_list">
+                            <li class="soft_skills_icon"><span class="soft_skills_text">Discovering new cultures</span></li>
+                            <li class="soft_skills_icon"><span class="soft_skills_text">Photography</span></li>
+                            <li class="soft_skills_icon"><span class="soft_skills_text">Sports</span></li>
+                            <li class="soft_skills_icon"><span class="soft_skills_text">Learning new Languages</span></li>
+                            <li class="soft_skills_icon"><span class="soft_skills_text">Reading and writing</span></li>
+                            <!-- <li class="soft_skills_icon"><span class="soft_skills_text">Playing the piano</span></li> -->
+                        </ul>
+                    </div>
+                    <!--Tech Skills-->
+                    <div class="tech_skills">
+                        <h3 class="sidebar_title">Tech Skills</h3>
+                        <ul class="tech_skills_list">
+                            <li class="tech_skills_icon"><span class="tech_skills_text">Photoshop</span></li>
+                            <li class="tech_skills_icon"><span class="tech_skills_text">HTML</span></li>
+                            <li class="soft_skills_icon"><span class="soft_skills_text">CSS</span></li>
+                            <li class="soft_skills_icon"><span class="soft_skills_text">JavaScript</span></li>
+                            <li class="soft_skills_icon"><span class="soft_skills_text">React</span></li>
+                            <li class="soft_skills_icon"><span class="soft_skills_text">GitHub</span></li>
+                        </ul>
+                    </div>
+                    <div class="soft_skills">
+                        <h3 class="sidebar_title">Languages</h3>
+                        <ul class="soft_skills_list">
+                            <li class="soft_skills_icon"><span class="soft_skills_text">Ukrainian - Native</span></li>
+                            <li class="soft_skills_icon"><span class="soft_skills_text">Russian - Native</span></li>
+                            <li class="soft_skills_icon"><span class="soft_skills_text">English - Intermediate</span></li>
+                            <li class="soft_skills_icon"><span class="soft_skills_text">Spanish - Beginner</span></li>
+                        </ul>
+                    </div>
                 </div>
-            </div>
-            <!--Tech Skils-->
-            <!-- <div class="tech_skills">
-                <h3 class="sidebar_title">Skills</h3>
-                <ul class="tech_skills_list">
-                    <li class="tech_skills_icon"><span class="tech_skills_text">Excellent Work Ethic</span></li>
-                    <li class="tech_skills_icon"><span class="tech_skills_text">Ability to manage time properly</span></li>
-                    <li class="soft_skills_icon"><span class="soft_skills_text">Good communicational skill</span></li>
-                    <li class="soft_skills_icon"><span class="soft_skills_text">High level of energy</span></li>
-                    <li class="soft_skills_icon"><span class="soft_skills_text">Active and Creative</span></li>
-                    <li class="soft_skills_icon"><span class="soft_skills_text">Friendly and Outgoing Attitude</span></li>
-                </ul>
-            </div> -->
-            <!--Soft Skills-->
-            <div class="soft_skills">
-                <h3 class="sidebar_title">Interests</h3>
-            <ul class="soft_skills_list">
-                <li class="soft_skills_icon"><span class="soft_skills_text">Discovering new cultures</span></li>
-                <li class="soft_skills_icon"><span class="soft_skills_text">Photography</span></li>
-                <li class="soft_skills_icon"><span class="soft_skills_text">Sports</span></li>
-                <li class="soft_skills_icon"><span class="soft_skills_text">Learning new Languages</span></li>
-                <li class="soft_skills_icon"><span class="soft_skills_text">Reading and writing</span></li>
-                <!-- <li class="soft_skills_icon"><span class="soft_skills_text">Playing the piano</span></li> -->
-            </ul>
-            </div>
-            <div class="soft_skills">
-                <h3 class="sidebar_title">Languages</h3>
-                <ul class="soft_skills_list">
-                    <li class="soft_skills_icon"><span class="soft_skills_text">Ukrainian - Native</span></li>
-                    <li class="soft_skills_icon"><span class="soft_skills_text">Russian - Native</span></li>
-                    <li class="soft_skills_icon"><span class="soft_skills_text">English - Intermediate</span></li>
-                    <li class="soft_skills_icon"><span class="soft_skills_text">Spanish - Beginner</span></li>
-                </ul>
-            </div>
             </aslide>
     </div>
 </body>
 </html>
+
