--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                         </span>
                     <br /><span class="pa"> 
                         Before coming to Ireland, I was a teacher of English in the kindergarten. I also hold a certificate in teaching English.
-                        My hobbies are photography and sports. I am studying web development for front end specialists too. I was a Scrum Master and led a 9-person front-end developer team through creation of 2 projects. I enjoy working as a
-                        part of a group as well as using my own initiative.
+                        My hobbies are photography and sports. I am studying web development for front end specialists too. I enjoy working as a
+                        part of a Team as well as using my own initiative.
                         </span>
                 </div>
                 <!--Projects-->
@@ -63,6 +63,16 @@
                 <div class="work">
                 <h3 class="title">Work Experience</h3>
                     <div>
+                        <h4 class="work_position">Waitress in restaurant <span class="organization"> Taksim</span></h4>
+                        <p class="period">2016-2017 <span class="line">|</span> Guangzhou, China</p>
+                    </div>
+                    <div>
+                        <h4 class="work_position">Waitress in Dolphinarium restaurant <span class="organization">Nemo</span></h4>
+                        <p class="period">2011-2012 <span class="line">|</span> Ukraine, Kharkiv</p>
+                        <ul class="work_list">
+                        </ul>
+                    </div>
+                    <div>
                         <h4 class="work_position">English Teacher <span class="organization">Shkola Radosti Oleni Chernyavskoy</span></h4>
                         <p class="period">2021-2022 <span class="line">|</span> Kharkiv </p>
                         <ul class="work_list">
@@ -90,16 +100,6 @@
                         </ul>
                     </div>
                     <div>
-                        <h4 class="work_position">Waitress in restaurant <span class="organization"> Taksim</span></h4>
-                        <p class="period">2016-2017 <span class="line">|</span> Guangzhou, China</p>
-                    </div>
-                    <div>
-                        <h4 class="work_position">Waitress in Dolphinarium restaurant <span class="organization">Nemo</span></h4>
-                        <p class="period">2011-2012 <span class="line">|</span> Ukraine, Kharkiv</p>
-                        <ul class="work_list">
-                        </ul>
-                    </div>
-                    <div>
                         <h4 class="work_position">Freelance photographer<span class="organization"> Freelance</span></h4>
                         <p class="period">2009 and currently <span class="line">|</span> Kharkiv </p>
                     </div>
@@ -112,13 +112,13 @@
                             <li class="tech_skills_icon"><span class="tech_skills_text skills">Excellent Work Ethic</span></li>
                             <li class="tech_skills_icon"><span class="tech_skills_text skills">Ability to manage time properly</span></li>
                             <li class="soft_skills_icon"><span class="soft_skills_text skills">Good communicational skills</span></li>
-                            <li class="soft_skills_icon"><span class="soft_skills_text skills">Agile</span></li>
+                            <!-- <li class="soft_skills_icon"><span class="soft_skills_text skills">Agile</span></li> -->
                         </div>
                         <div class="wrapper-skills">
                             <li class="soft_skills_icon"><span class="soft_skills_text skills">High level of energy</span></li>
                             <li class="soft_skills_icon"><span class="soft_skills_text skills">Active and Creative</span></li>
                             <li class="soft_skills_icon"><span class="soft_skills_text skills">Friendly and Outgoing Attitude</span></li>
-                            <li class="soft_skills_icon"><span class="soft_skills_text skills">Attention to Detail</span></li>
+                            <!-- <li class="soft_skills_icon"><span class="soft_skills_text skills">Attention to Detail</span></li> -->
                         </div>
                     </ul>
                 </div>
@@ -189,7 +189,7 @@
                         </ul>
                     </div>
                     <!--Tech Skills-->
-                    <div class="tech_skills">
+                    <!-- <div class="tech_skills">
                         <h3 class="sidebar_title">Tech Skills</h3>
                         <ul class="tech_skills_list">
                             <li class="tech_skills_icon"><span class="tech_skills_text">Photoshop</span></li>
@@ -199,7 +199,7 @@
                             <li class="soft_skills_icon"><span class="soft_skills_text">React</span></li>
                             <li class="soft_skills_icon"><span class="soft_skills_text">GitHub</span></li>
                         </ul>
-                    </div>
+                    </div> -->
                     <div class="soft_skills">
                         <h3 class="sidebar_title">Languages</h3>
                         <ul class="soft_skills_list">
