--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <br /><span class="pa"> 
                         Before coming to Ireland, I was a teacher of English in the kindergarten. I also hold a certificate in teaching English.
                         My hobbies are photography and sports. I am studying web development for front end specialists too. I enjoy working as a
-                        part of a Team as well as using my own initiative.
+                        part of a team as well as using my own initiative.
                         </span>
                 </div>
                 <!--Projects-->
