--- a/index.html
+++ b/index.html
@@ -22,17 +22,20 @@
                     <h1 class="about_name">Maryna Nazina</h1>
                     <p class="about_discribtion">
                         <span class="pa">
-                            I have some experience of the catering service. I worked as a waitress in a restaurant in Ukraine and China as
-                            well. I am a diligent and friendly person with excellent customer service skills.
+                            Devoted to work as a React developer with broad experience of building responsive websites seeking for a job as a Junior
+                            or Trainee in a friendly team. Diligent and committed person with a strong, flexible and analytical mind. Possessing
+                            proficient knowledge of HTML, CSS, JavaScript, React and Adobe Photoshop. With passion for both working as a Scrum
+                            Master and a software development. Led a 9-person team through creation of 2 responsive websites using JavaScript.
+                            Delivering excellent results as a part of a team as well as using own initiative.
                         </span>
                     <br /><span class="pa"> 
-                        Before coming to Ireland, I was a teacher of English in the kindergarten. I also hold a certificate in teaching English.
+                        <!-- Before coming to Ireland, I was a teacher of English in the kindergarten. I also hold a certificate in teaching English.
                         My hobbies are photography and sports. I am studying web development for front end specialists too. I enjoy working as a
-                        part of a team as well as using my own initiative.
+                        part of a team as well as using my own initiative. -->
                         </span>
                 </div>
                 <!--Projects-->
-                <!-- <div class="projects">
+                <div class="projects">
                     <h3 class="title">
                         Projects
                     </h3>
@@ -40,55 +43,42 @@
                         <li class="projects_item">
                             <span class="project">
                                 <a href="https://nazinamari.github.io/goit-markup-hw-08/" 
-                                class="project_link">Web Studio</a>
-                            <p><span class="project_bracket">(</span>A website with a responsive layout<span class="project_bracket">)</span></p>
+                                class="project_link">Web Studio
+                                </a>
+                                <p class="project-name">
+                                    <span class="project_bracket">(
+                                    </span>A website with responsive layout
+                                    <span class="project_bracket">)
+                                    </span>
+                                </p>
                             </span>
                         </li>
                         <li class="projects_item">
                             <span class="project">
-                                <a href="https://nazinamari.github.io/ice-cream/" class="project_link">Ice-cream Web Site</a>
-                            <p><span class="project_bracket">(</span>Team project for youngers yummy time<span class="project_bracket">)</span></p>    
+                                <a href="https://nazinamari.github.io/ice-cream/" class="project_link">Ice-cream Web Site
+                                </a>
+                                <p class="project-name">
+                                    <span class="project_bracket">(</span>Project for food service<span class="project_bracket">)</span></p>    
                             </span>
                         </li>
                         <li class="projects_item">
                             <span class="project">
-                                <a href=" https://nazinamari.github.io/design-studio/" class="project_link">Design Studio</a>
-                            <p><span class="project_bracket">(</span>Design of web site
-                            <span class="project_bracket">)</span></p>
+                                <a href="https://aegisvp.github.io/goit-js-team09/" class="project_link">Filmoteka</a>
+                                <p class="project-name">
+                                    <span class="project_bracket">(</span>Movie Finder
+                                    <span class="project_bracket">)</span>
+                                </p>
                             </span>
                         </li>
                     </ol>
-                </div> -->
+                </div>
                 <!-- work -->
                 <div class="work">
                 <h3 class="title">Work Experience</h3>
                     <div>
-                        <h4 class="work_position">Waitress in restaurant <span class="organization"> Taksim</span></h4>
-                        <p class="period">2016-2017 <span class="line">|</span> Guangzhou, China</p>
-                    </div>
-                    <div>
-                        <h4 class="work_position">Waitress in Dolphinarium restaurant <span class="organization">Nemo</span></h4>
-                        <p class="period">2011-2012 <span class="line">|</span> Ukraine, Kharkiv</p>
-                        <ul class="work_list">
-                        </ul>
-                    </div>
-                    <div>
                         <h4 class="work_position">English Teacher <span class="organization">Shkola Radosti Oleni Chernyavskoy</span></h4>
                         <p class="period">2021-2022 <span class="line">|</span> Kharkiv </p>
-                        <ul class="work_list">
-                            <!-- <li class="work_list_item"></li>
-                                                                    <li class="work_list_item">Text</li>
-                                                                    <li class="work_list_item">Text</li> -->
-                        </ul>
                     </div>
-                    <!-- <div>
-                        <h4 class="work_position">English Tutor <span class="organization">TutorOnLine</span></h4>
-                        <p class="period">2020-2022 <span class="line">|</span> Online</p>
-                    </div> -->
-                    <!-- <div>
-                        <h4 class="work_position">English Tutor <span class="organization">Shutoon Training Center</span></h4>
-                        <p class="period">2019-2020 <span class="line">|</span> Guangzhou, China </p>
-                    </div> -->
                     <div>
                         <h4 class="work_position">English Teacher <span class="organization"> Chinese Kindergarten and Training Center</span></h4>
                         <p class="period">2017-2019 <span class="line">|</span> Guangzhou, China</p>
@@ -99,6 +89,17 @@
                             <li class="work_list_item">Shutoon Training Center</li>
                         </ul>
                     </div>
+                    <!-- <div>
+                        <h4 class="work_position">Waitress in restaurant</h4>
+                        <ul class="work_list">
+                            <li class="work_list_item">Waitress in restaurant Taksim
+                                <p class="period">2016-2017 <span class="line">|</span> Guangzhou, China</p>
+                            </li>
+                            <li class="work_list_item">Waitress in Dolphinarium restaurant
+                                <p class="period">2011-2012 <span class="line">|</span> Ukraine, Kharkiv</p>
+                            </li>
+                        </ul>
+                    </div> -->
                     <div>
                         <h4 class="work_position">Freelance photographer<span class="organization"> Freelance</span></h4>
                         <p class="period">2009 and currently <span class="line">|</span> Kharkiv </p>
@@ -106,19 +107,19 @@
                 </div>
 
                 <div class="tech_skills skills">
-                    <h3 class="sidebar_title skills_title">Skills</h3>
+                    <h3 class="sidebar_title skills_title">Soft Skills</h3>
                     <ul class="tech_skills_list">
                         <div class="wrapper-skills">
                             <li class="tech_skills_icon"><span class="tech_skills_text skills">Excellent Work Ethic</span></li>
                             <li class="tech_skills_icon"><span class="tech_skills_text skills">Ability to manage time properly</span></li>
                             <li class="soft_skills_icon"><span class="soft_skills_text skills">Good communicational skills</span></li>
-                            <!-- <li class="soft_skills_icon"><span class="soft_skills_text skills">Agile</span></li> -->
+                            <li class="soft_skills_icon"><span class="soft_skills_text skills">Agile</span></li>
                         </div>
                         <div class="wrapper-skills">
                             <li class="soft_skills_icon"><span class="soft_skills_text skills">High level of energy</span></li>
                             <li class="soft_skills_icon"><span class="soft_skills_text skills">Active and Creative</span></li>
                             <li class="soft_skills_icon"><span class="soft_skills_text skills">Friendly and Outgoing Attitude</span></li>
-                            <!-- <li class="soft_skills_icon"><span class="soft_skills_text skills">Attention to Detail</span></li> -->
+                            <li class="soft_skills_icon"><span class="soft_skills_text skills">Attention to Detail</span></li>
                         </div>
                     </ul>
                 </div>
@@ -189,7 +190,7 @@
                         </ul>
                     </div>
                     <!--Tech Skills-->
-                    <!-- <div class="tech_skills">
+                    <div class="tech_skills">
                         <h3 class="sidebar_title">Tech Skills</h3>
                         <ul class="tech_skills_list">
                             <li class="tech_skills_icon"><span class="tech_skills_text">Photoshop</span></li>
@@ -199,7 +200,7 @@
                             <li class="soft_skills_icon"><span class="soft_skills_text">React</span></li>
                             <li class="soft_skills_icon"><span class="soft_skills_text">GitHub</span></li>
                         </ul>
-                    </div> -->
+                    </div>
                     <div class="soft_skills">
                         <h3 class="sidebar_title">Languages</h3>
                         <ul class="soft_skills_list">
