--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                             <li class="tech_skills_icon"><span class="tech_skills_text skills">Excellent Work Ethic</span></li>
                             <li class="tech_skills_icon"><span class="tech_skills_text skills">Ability to manage time properly</span></li>
                             <li class="soft_skills_icon"><span class="soft_skills_text skills">Good communicational skills</span></li>
-                            <li class="soft_skills_icon"><span class="soft_skills_text skills">Agile</span></li>
+                            <li class="soft_skills_icon"><span class="soft_skills_text skills">Knowledge of Agile Methodologies</span></li>
                         </div>
                         <div class="wrapper-skills">
                             <li class="soft_skills_icon"><span class="soft_skills_text skills">High level of energy</span></li>
