--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                             Devoted to work as a React developer with broad experience of building responsive websites seeking for a job as a Junior
                             or Trainee in a friendly team. Diligent and committed person with a strong, flexible and analytical mind. Possessing
                             proficient knowledge of HTML, CSS, JavaScript, React and Adobe Photoshop. With passion for both working as a Scrum
-                            Master and a software development. Led a 9-person team through creation of 2 responsive websites using JavaScript.
+                            Master and a software developer. Led a 9-person team through creation of 2 responsive websites using JavaScript.
                             Delivering excellent results as a part of a team as well as using own initiative.
                         </span>
                     <br /><span class="pa"> 
